--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.group.CreateNewGroupActivity"></activity>
+        <activity android:name=".ui.main.group.GroupRoomActivity"></activity>
+        <activity android:name=".ui.main.group.CreateNewGroupActivity" />
         <activity android:name=".ui.main.todo.EditTodoActivity" />
         <activity android:name=".ui.main.todo.AddTodoActivity" />
 
