--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,6 @@ dependencies {
     // https://github.com/st235/ExpandableBottomBar
     implementation 'com.github.st235:expandablebottombar:1.1.0'
 
-    // Kakao Login
-    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
-
     // Firebase Firestore
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
 
@@ -60,8 +57,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${project.LIFECYCLE_VERSION}"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:${project.LIFECYCLE_VERSION}"
 
+    // Paging
+    implementation 'androidx.paging:paging-runtime:2.1.2'
+
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Kakao Login
+    // https://developers.kakao.com/docs/latest/ko/kakaologin/android
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 
     // Joda-Time
     // https://github.com/JodaOrg/joda-time
