--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,19 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${project.LIFECYCLE_VERSION}"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:${project.LIFECYCLE_VERSION}"
 
-    // Paging
-    implementation 'androidx.paging:paging-runtime:2.1.2'
+
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Firestore FirebaseUI Library
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
+
+    //    // Paging
+    implementation 'androidx.paging:paging-runtime:2.1.2'
+
+//    // Paging Library
+//    implementation 'android.arch.paging:runtime:1.0.1'
 
     // Kakao Login
     // https://developers.kakao.com/docs/latest/ko/kakaologin/android
